# bluemvmt-gsf

./: .gitignore  README.rst  cloud-config.yaml  gsf_to_csv-flatten.py  gsf_to_csv.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
bluemvmt_gsf/models/: __init__.py
bluemvmt_gsf/reader/: gsf3_09.py
src/bluemvmt_gsf/: __init__.py  skeleton.py
src/bluemvmt_gsf/libgsf/: __init__.py  bindings.py
src/bluemvmt_gsf/models/: __init__.py  gsf_sensor_specific.py  mappings.py
src/bluemvmt_gsf/reader/: __init__.py  gsf3_09.py  json_reader.py
tests/: conftest.py  swath_bathymetric_ping.json  test_deserialize.py  test_gsf_to_json.py  test_read.py  test_serialize.py  test_skeleton.py
tests/libgsf/: test_309.py  test_310.py
