[tool.poetry]
name = "bluemvmt-gsf"
version = "0.2.0"
description = "A client library for accessing Sidecar Manager API"
authors = []
readme = "README.rst"
packages = [
    {include = "bluemvmt_gsf", from = "src"},
]
include = ["CHANGELOG.md"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
#requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
#build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
